# stm32f446-rustcode

./: Cargo.toml  README.md  rustup-f446-setup.sh
